# onnxruntime-rs

./: README.md
.github/workflows/: general.yml
onnxruntime/: Cargo.toml
onnxruntime-sys/: Cargo.toml  build.rs
onnxruntime-sys/examples/: c_api_sample.rs
onnxruntime-sys/src/: lib.rs
onnxruntime/examples/: issue22.rs  sample.rs
onnxruntime/src/: environment.rs  error.rs  lib.rs  memory.rs  session.rs
onnxruntime/src/tensor/: mod.rs  ort_owned_tensor.rs  ort_tensor.rs  ort_tensor_dyn.rs
